--- a/_includes/blocks/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/ms-tags-colors-color-sublist.html
@@ -2,12 +2,12 @@
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #dcdcdc;" data-color="#dcdcdc">ग़</span>
                     </div>
@@ -17,19 +17,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Silver
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
                     </div>
@@ -39,19 +39,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Deep Blue Sky
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                     </div>
@@ -61,19 +61,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Malachite
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                     </div>
@@ -83,19 +83,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Saffron
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #b8860b;" data-color="#b8860b">ग़</span>
                     </div>
@@ -105,19 +105,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Dark Goldenrod
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                     </div>
@@ -127,19 +127,19 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Cadmium Red
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 0.15;" data-flex="0.15">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #343434;" data-color="#343434">ग़</span>
                     </div>
@@ -149,7 +149,7 @@
             </div>
           </div>
         </li>
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell" style="flex-grow: 4;" data-flex="4">
           <div class="itemBoxTable__bodyCellInner">
             Jet
           </div>
