--- a/_includes/javascript/and-or-selector.html
+++ b/_includes/javascript/and-or-selector.html
@@ -1,4 +1,4 @@
-<li class="itemBoxTable__bodyCell " style="flex-grow: 0.5;" data-flex="0.5">
+<li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
   <div class="itemBoxTable__bodyCellInner">
     <div class="pmx-field">
       <div class="pmx-field__inner">
@@ -8,6 +8,7 @@
               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
             </div>
           </div>
+          <div class="pmx-selector__itemSeperator"></div>
           <div class="pmx-selector__item JS_selectorItem">
             <div class="pmx-selector__block">
               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
