--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -48,12 +48,12 @@
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                                <div class="pmx-selector__item">
+                              <div class="pmx-selector pmx-selector--expanded">
+                                <div class="pmx-selector__item pmx-selector__item--selected">
                                   <div class="pmx-selector__block">
                                     <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                                   </div>
@@ -63,7 +63,7 @@
                           </div>
                         </div>
                       </li>
-                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                           Design
                         </div>
@@ -107,12 +107,12 @@
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                                <div class="pmx-selector__item">
+                              <div class="pmx-selector pmx-selector--expanded">
+                                <div class="pmx-selector__item pmx-selector__item--selected">
                                   <div class="pmx-selector__block">
                                     <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                                   </div>
@@ -122,7 +122,7 @@
                           </div>
                         </div>
                       </li>
-                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                           front-end
                         </div>
@@ -141,12 +141,12 @@
                     {% include blocks/ms-tags-colors-color-sublist.html %}
 
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                                <div class="pmx-selector__item">
+                              <div class="pmx-selector pmx-selector--expanded">
+                                <div class="pmx-selector__item pmx-selector__item--selected">
                                   <div class="pmx-selector__block">
                                     <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                                   </div>
@@ -156,7 +156,7 @@
                           </div>
                         </div>
                       </li>
-                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                         <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                           back-end
                         </div>
@@ -208,12 +208,12 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
                             </div>
@@ -223,12 +223,12 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                             </div>
@@ -238,7 +238,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     Design
                   </div>
@@ -253,12 +253,12 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
                             </div>
@@ -268,12 +268,12 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
                             </div>
@@ -283,7 +283,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     Marketing
                   </div>
@@ -298,12 +298,12 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
                             </div>
@@ -313,12 +313,12 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                             </div>
@@ -328,7 +328,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     front-end
                   </div>
@@ -343,12 +343,12 @@
               {% include blocks/ms-tags-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 0.15;" data-flex="0.15">
+                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
                             </div>
@@ -358,12 +358,12 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.1;" data-flex="0.1">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                             </div>
@@ -373,7 +373,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell" style="flex-grow: 7;" data-flex="7">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
                     back-end
                   </div>
