--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -49,12 +49,12 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                             </div>
@@ -82,12 +82,12 @@
               </ul>
               {% include blocks/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                             </div>
@@ -115,12 +115,12 @@
               </ul>
               {% include blocks/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                             </div>
@@ -179,12 +179,12 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
                             </div>
@@ -208,12 +208,12 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
                             </div>
@@ -237,12 +237,12 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
                             </div>
@@ -266,12 +266,12 @@
               {% include blocks/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 0.075;" data-flex="0.075">
+                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                          <div class="pmx-selector__item">
+                        <div class="pmx-selector pmx-selector--expanded">
+                          <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
                             </div>
