--- a/_includes/blocks/ms-tags-filter-sublist.html
+++ b/_includes/blocks/ms-tags-filter-sublist.html
@@ -6,8 +6,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
                     </div>
@@ -23,8 +23,8 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                  <div class="pmx-selector__item">
+                <div class="pmx-selector pmx-selector--expanded">
+                  <div class="pmx-selector__item pmx-selector__item--selected">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
                     </div>
