--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,3 +10,7 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/shared.css">
+
+<!-- JQUERY -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
