--- a/sass/components/selector.scss
+++ b/sass/components/selector.scss
@@ -112,6 +112,16 @@
       font-size: 13px;
       margin: 3px 0;
       color: #919191;
+
+      a {
+        color: #2468b6;
+        text-decoration: underline;
+        transition: all .3s ease-in-out;
+
+        &:focus {
+          box-shadow: 0 0 30px -5px rgba(36, 104, 182, .5);
+        }
+      }
     }
   }
 }
