--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -362,6 +362,7 @@
 
           .pmx-field {
             margin: 0;
+            padding: 0;
 
             &__inner {
               padding: 5px 0;
