multiSelector: make sure new added colortoggle has a selectedItem

--- a/_includes/javascript/colorAction.html
+++ b/_includes/javascript/colorAction.html
@@ -3,7 +3,7 @@
     <div class="pmx-field">
       <div class="pmx-field__inner">
         <div class="pmx-selector pmx-selector--expanded">
-          <div class="pmx-selector__item">
+          <div class="pmx-selector__item pmx-selector__item--selected">
             <div class="pmx-selector__block">
               <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}">ग़</span>
             </div>
