--- a/sass/components/itemBox.scss
+++ b/sass/components/itemBox.scss
@@ -279,6 +279,10 @@
           }
         }
 
+        &--align-right {
+          text-align: right;
+        }
+
         &--active {
           &::after {
             height: 2px;
