--- a/_includes/blocks/ms-tags-filter-sublist.html
+++ b/_includes/blocks/ms-tags-filter-sublist.html
@@ -4,10 +4,11 @@
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
+
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
                     </div>
@@ -15,16 +16,18 @@
                 </div>
               </div>
             </div>
+
           </div>
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
+
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
+                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
                     </div>
@@ -32,6 +35,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </li>
       </ul>
